[🌈beautify] fix flicker when page switch

--- a/src/common/styles/theme.less
+++ b/src/common/styles/theme.less
@@ -26,7 +26,6 @@
 /** [ Attention ] 注意， less 是预编译的, 但是 less 执行转译的时候 :root 根本还没挂载变量, 会导致未定义的引用 */
 /** 所以这里只能用 css varibles */
 * {
-  transition: background-color 1s ease;
   color: var(--text-color)
 }
 
@@ -38,4 +37,10 @@ body {
 button {
   background: var(--accent-color);
   color: var(--text-color);
+}
+
+.on-theme-switching {
+  * {
+    transition: background-color 1s ease;
+  }
 }
